# emg-core

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
benches/: emg_benchmarks.rs  processing_pipeline.rs
config/: default.toml
config/simulation_profiles/: amputee_baseline.toml  healthy_user.toml  stress_test.toml
examples/: acquisition_demo.rs  basic_usage.rs  simulator_demo.rs
scripts/: generate_docs.sh
src/: error.rs  lib.rs
src/acquisition/: buffer_manager.rs  mod.rs  ring_buffer.rs  sample_sync.rs
src/config/: constants.rs  device_config.rs  loader.rs  mod.rs  processing.rs  processing_config.rs  schema_validator.rs
src/config/constants/: error.rs
src/hal/: mod.rs  serial_driver.rs  simulator.rs  tests.rs  traits.rs  types.rs  usb_driver.rs
src/hal/simulation/: artifact_injection.rs  config.rs  mod.rs  muscle_model.rs  noise_models.rs  profiles.rs  signal_generator.rs
src/processing/: filter_bank.rs  filters.rs  mod.rs  pipeline.rs  quality_monitor.rs  windowing.rs
src/processing/features/: frequency.rs  mod.rs  time_domain.rs  wavelets.rs
src/processing/filters/: fir.rs  iir.rs  mod.rs  notch.rs
src/processing/filters_v1/: fir.rs  iir.rs  mod.rs  notch.rs
src/processing/filters_v2/: coefficients.rs  filter_bank.rs  mod.rs  notch.rs
src/processing/noise_reduction/: adaptive_filter.rs  mod.rs  spectral_subtraction.rs  wiener_filter.rs
src/utils/: bounds.rs  conversion.rs  integrity.rs  mod.rs  time.rs  validation.rs
src/validation/: mod.rs
tests/: error_propagation_tests.rs  feature_extraction_tests.rs  hal_integration.rs  noise_reduction_tests.rs  ring_buffer_performance.rs
tests/integration/: acquisition_integration.rs  hal_error_handling.rs
