# Cargo.toml
[package]
name = "emg-core"
version = "0.1.0"
edition = "2021"
authors = ["EMG Prosthetics Team <team@emg-prosthetics.com>"]
license = "MIT"
description = "Real-time EMG processing core for prosthetic control"
repository = "https://github.com/emg-prosthetics/emg-core"
keywords = ["emg", "prosthetics", "real-time", "embedded", "biomedical"]
categories = ["embedded", "science", "hardware-support"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


#[workspace]
#members = [
 #   "crates/hal",
  #  "crates/processing",
   # "crates/ml",
    #"crates/communication"
#]

[dependencies]


# Real-time processing
tokio = { version = "1.0", features = ["full"], optional = true }
crossbeam = "0.8"
parking_lot = "0.12"

# Signal processing
rustfft = "6.0"
ndarray = "0.15"

notify = "4.0"


# ML inference
ort = { version = "2.0.0-rc.10", optional = true }  # ONNX Runtime
tflitec = { version = "0.4", optional = true }  # TensorFlow Lite

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
config = "0.14"

# Communication
shared_memory = "0.12"
redis = { version = "0.24", optional = true }
prost = "0.12"  # Protocol Buffers

# Embedded
embedded-hal = { version = "1.0", optional = true }
cortex-m = { version = "0.7", optional = true }
cortex-m-rt = { version = "0.7", optional = true }


document-features = "0.2"
serde_json = "1.0.140"
tempfile = "3.20.0"
rand = "0.8.5"
crc32fast = "1.4.2"
async-trait = "0.1.88"
thiserror = "2.0.12"
tracing = "0.1.41"
rayon = "1.10.0"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
serial_test = "3.0"

[features]

default = ["desktop", "onnx"]

desktop = ["tokio", "redis", "ort"]

embedded = ["embedded-hal", "cortex-m", "cortex-m-rt"]

onnx = ["ort"]

tflite = ["tflitec"]

simulation = []

high_precision_timing = []

# Feature for enhanced validation with regex support
enhanced_validation = []

# Feature for comprehensive integrity checking
#full_integrity_checking = ["crc32fast"]

# Feature for performance monitoring
performance_monitoring = []

[[bin]]
name = "emg-desktop"
path = "src/bin/desktop_main.rs"
required-features = ["desktop"]

[[bin]]
name = "emg-embedded"
path = "src/bin/embedded_main.rs"
required-features = ["embedded"]

[[bench]]
name = "processing_pipeline"
harness = false

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1

[profile.embedded]
inherits = "release"
panic = "abort"
opt-level = "z"  # Optimize for size
